# og-image-generator

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  flake.nix
.github/workflows/: release.yml
examples/: carbon.html  partytime.html
src/: background.rs  cli.rs  color.rs  html_to_image.rs  lib.rs  main.rs  og_image.rs  test.html  text.rs
wix/: main.wxs
