[package]
name = "og-image-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.29"
bon = "3.6.3"
image = "0.25.6"
imageproc = "0.25.0"
resvg = "0.45.1"
taffy = "0.8.1"
tap = "1.0.1"
thiserror = "2.0.12"

[lints.rust]
missing_docs = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }
missing_errors_doc = "allow"
# use Trait; => use Trait as _;
unused_trait_names = "warn"
# if we need it const, make it const. no need to make everything that can be const, const
missing_const_for_fn = "allow"
# arbitrary limit imposes unnecessary restriction and can make code harder to follow
too_many_lines = "allow"

cast_precision_loss = "allow"
cast_possible_truncation = "allow"
