[package]
name = "og-image-generator"
version = "0.1.0"
edition = "2024"

[dependencies]

# --- HTML + CSS rendering
anyrender = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
anyrender_vello_cpu = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
blitz-dom = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
blitz-html = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
blitz-net = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
# ---

tokio = { version = "1.45.1", features = ["full"] }

image = "0.25.6"
png = "0.17.16"
clap = { version = "4.5.39", features = ["derive"] }

[lints.rust]
missing_docs = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }

cast_sign_loss = "allow"
future_not_send = "allow"
missing_errors_doc = "allow"
# use Trait; => use Trait as _;
unused_trait_names = "warn"
# if we need it const, make it const. no need to make everything that can be const, const
missing_const_for_fn = "allow"
# arbitrary limit imposes unnecessary restriction and can make code harder to follow
too_many_lines = "allow"

cast_precision_loss = "allow"
cast_possible_truncation = "allow"
