[package]
name = "og-image-generator"
repository = "https://github.com/nik-rev/og-image-generator"
homepage = "https://github.com/nik-rev/og-image-generator"
description = "Pain-free OpenGraph image generation using HTML and CSS for your blog"
authors = ["Nik Revenco"]
version = "0.1.0"
edition = "2024"

[package.metadata.wix]
upgrade-guid = "81E8FB3D-416D-4C7A-830D-7FB59ED4F00B"
path-guid = "45D98324-71EE-4BD0-A700-781512EDDE92"
license = false
eula = false

[dependencies]

# --- HTML + CSS rendering
anyrender = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
anyrender_vello_cpu = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
blitz-dom = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
blitz-html = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
blitz-net = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz", rev = "1bd80524c6229c7d5232613f4e6a4e76f8a61c2d" }
# ---

# Async runtime
tokio = { version = "1.45.1", features = ["full"] }
# Image rendering
image = "0.25.6"
# CLI argument parsing
clap = { version = "4.5.39", features = [
  "derive",
  "wrap_help",
  "unstable-markdown",
] }
tap = "1.0.1"
fontique = "0.4.0"
tera = { version = "1.20.0", default-features = false }
anyhow = "1.0.98"
anstyle = "1.0.10"

[lints.rust]
missing_docs = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }

cast_sign_loss = "allow"
future_not_send = "allow"
missing_errors_doc = "allow"
# use Trait; => use Trait as _;
unused_trait_names = "warn"
# if we need it const, make it const. no need to make everything that can be const, const
missing_const_for_fn = "allow"
# arbitrary limit imposes unnecessary restriction and can make code harder to follow
too_many_lines = "allow"

cast_precision_loss = "allow"
cast_possible_truncation = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
